crates/nyx-compiler/tests/snapshots/test_let_statement__compile_expression_using_globals.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(r#\"\n        let x = 10;\n        let y = 20;\n        let result = x + y;\n        \"#)"
---
Constants:
   0  Int(10)
   1  Int(20)

Globals:
   0  x
   1  y
   2  result

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  DEFINE_GLOBAL          0  (x)
   6  LOAD_CONSTANT          1  (Int(20))
   9  DEFINE_GLOBAL          1  (y)
  12  LOAD_GLOBAL            0  (x)
  15  LOAD_GLOBAL            1  (y)
  18  BINARY                 0  (ADD)
  20  DEFINE_GLOBAL          2  (result)
