crates/nyx-compiler/tests/snapshots/test_let_statement__compile_false_let_binding.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(\"let enabled = false;\")"
---
Constants:
   0  Bool(false)

Globals:
   0  enabled

Bytecode:
   0  LOAD_CONSTANT          0  (Bool(false))
   3  DEFINE_GLOBAL          0  (enabled)
