crates/nyx-compiler/tests/snapshots/test_let_statement__compile_grouped_global_expression.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(r#\"\n        let x = 10;\n        let y = 10 + x;\n        let c = ((x + y) * (x + x)) / y;\n        \"#)"
---
Constants:
   0  Int(10)

Globals:
   0  x
   1  y
   2  c

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  DEFINE_GLOBAL          0  (x)
   6  LOAD_CONSTANT          0  (Int(10))
   9  LOAD_GLOBAL            0  (x)
  12  BINARY                 0  (ADD)
  14  DEFINE_GLOBAL          1  (y)
  17  LOAD_GLOBAL            0  (x)
  20  LOAD_GLOBAL            1  (y)
  23  BINARY                 0  (ADD)
  25  LOAD_GLOBAL            0  (x)
  28  LOAD_GLOBAL            0  (x)
  31  BINARY                 0  (ADD)
  33  BINARY                 2  (MUL)
  35  LOAD_GLOBAL            1  (y)
  38  BINARY                 3  (DIV)
  40  DEFINE_GLOBAL          2  (c)
