crates/nyx-compiler/tests/snapshots/test_let_statement__compile_identifier_reference.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(r#\"\n        let x = 10;\n        let y = x;\n        \"#)"
---
Constants:
   0  Int(10)

Globals:
   0  x
   1  y

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  DEFINE_GLOBAL          0  (x)
   6  LOAD_GLOBAL            0  (x)
   9  DEFINE_GLOBAL          1  (y)
