crates/nyx-compiler/tests/snapshots/test_let_statement__compile_integer_let_binding.snap
---
source: crates/nyx-compiler/tests/test_let_statement.rs
expression: "compile_source(\"let name = 10;\")"
---
Constants:
   0  Int(10)

Globals:
   0  name

Bytecode:
   0  LOAD_CONSTANT          0  (Int(10))
   3  DEFINE_GLOBAL          0  (name)
